--- a/trytouse.html
+++ b/trytouse.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" href="./cat.png" />
     <link rel="bookmark" href="./cat.png" />
     <link rel="stylesheet" href="./style.css" />
+    <script src="alert.js"></script>
   </head>
   <body>
     <div class="tit">
@@ -28,7 +29,7 @@
     <div class="for">
       <form action="" method="POST">
         <label for="Account">姓名: </label>
-        <input id="Account" type="text" name="id" required />
+        <input id="Account" type="text" name="name" required />
         <br />
         <label for="phone">電話: </label>
         <input
@@ -109,7 +110,12 @@
         <label for="checkbox">我意識清楚</label>
         <br />
       </form>
-      <button type="button" onclick="myFunc()">送出</button>
+      </div>
+      
+      <button type="button" onclick="myFunction()">送出</button>
+      <script>
+        
+        </script>
     </div>
   </body>
 </html>
