--- a/aboutus.html
+++ b/aboutus.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AboutUs_PAWINHAND</title>
+    <title>PAWINHAND_About Us</title>
     <meta
       name="description"
       content="喵砂 What is cat litter? 咪咪喵喵愛挖砂"
