--- a/index.html
+++ b/index.html
@@ -30,18 +30,30 @@
         愛滋貓咪救援募資計畫旨在為感染貓免疫缺陷病毒（FIV）的貓咪提供必要的醫療護理和支持，確保它們能夠過上健康快樂的生活。FIV貓咪常因其特殊需求而被忽視或遺棄，我們希望通過此計畫改變這一現狀，為它們創造一個充滿愛與關懷的環境。
         募資目標包括：
       </p>
-      <ol>
-        醫療費用:資金將用於感染貓咪的健康檢查、疫苗接種、定期檢查及治療二次感染等醫療費用。
-      </ol>
-      <ol>
-        營養支持：提供高質量的食物和營養補充品，幫助FIV貓咪保持良好的健康狀況。
-      </ol>
-      <ol>
-        避難所設施：改善現有的避難所設施，確保貓咪有一個乾淨、舒適且無壓力的生活環境，包括適當的隔離設施以防止病毒傳播。
-      </ol>
-      <ol>
-        教育和宣傳：通過宣傳活動，提高公眾對FIV的認識，消除對愛滋貓咪的誤解，鼓勵更多人採取負責任的飼養態度。
-      </ol>
+      <ul>
+        <li>
+          醫療費用:
+          <p>
+            資金將用於感染貓咪的健康檢查、疫苗接種、定期檢查及治療二次感染等醫療費用。
+          </p>
+        </li>
+        <li>
+          營養支持：
+          <p>提供高質量的食物和營養補充品，幫助FIV貓咪保持良好的健康狀況。</p>
+        </li>
+        <li>
+          避難所設施：
+          <p>
+            改善現有的避難所設施，確保貓咪有一個乾淨、舒適且無壓力的生活環境，包括適當的隔離設施以防止病毒傳播。
+          </p>
+        </li>
+        <li>
+          教育和宣傳：
+          <p>
+            通過宣傳活動，提高公眾對FIV的認識，消除對愛滋貓咪的誤解，鼓勵更多人採取負責任的飼養態度。
+          </p>
+        </li>
+      </ul>
     </div>
 
     <div class="內容">
@@ -60,6 +72,42 @@
         儘管FIV目前無法治癒，但感染貓咪依然可以有較高的生活質量。重要的是給予這些貓咪良好的營養、適當的醫療護理和一個無壓力的生活環境。定期的健康檢查和預防性治療有助於及早發現並治療二次感染。此外，感染FIV的貓咪應該避免與其他貓咪接觸，以防止病毒傳播。
         針對FIV的疫苗已在一些地區使用，但並非百分之百有效，並且在病毒的不同株之間存在交叉保護的問題。因此，預防感染的最佳方法依然是限制貓咪的戶外活動和避免與不明來源的貓咪接觸。
         總的來說，愛滋貓咪的養護需要更多的耐心和關愛，但它們同樣可以享受幸福的生活。對於這些特殊需求的貓咪，飼主的理解和支持是關鍵，讓它們能在一個安全和關愛的環境中生活。
+      </p>
+      <h2>為何需要關注貓愛滋議題？</h2>
+      <ol>
+        <li>
+          <h3>錯誤認知與汙名化</h3>
+          <p>
+            許多人對愛滋貓（感染貓免疫缺陷病毒，FIV）的認識不足，誤以為愛滋貓具有高度傳染性，甚至會對人類造成威脅，導致牠們被棄養或拒絕收養。事實上，愛滋貓只會透過深度咬傷傳播給其他貓，對人類和其他動物無害。
+          </p>
+        </li>
+        <li>
+          <h3>被忽視的生命價值</h3>
+          <p>
+            愛滋貓感染後可能長時間無症狀，甚至能夠像健康貓一樣過著正常的生活，但由於偏見，這些貓咪往往面臨棄養或安樂死的命運。牠們的生命價值值得被肯定與尊重。
+          </p>
+        </li>
+        <li>
+          <h3>醫療與照護需要</h3>
+          <p>
+            愛滋貓的免疫系統較弱，容易感染其他疾病，需要更細心的照顧和適當的醫療資源。然而，由於相關議題的討論不足，許多飼主不了解如何照顧牠們，也缺乏支持的社區或資源。
+          </p>
+        </li>
+        <li>
+          <h3>推廣責任飼養</h3>
+          <p>
+            關注愛滋貓議題可以教育飼主進行早期檢測、疫苗注射和絕育手術，以減少疾病傳播的風險，並倡導對寵物的終生負責。
+          </p>
+        </li>
+        <li>
+          <h3>鼓勵愛與包容</h3>
+          <p>
+            接納和照顧愛滋貓是一種體現愛心與包容的行為。透過關注這個議題，可以喚起社會對特殊需求動物的同理心，推動更多人改變對愛滋貓的偏見，進一步提升人類與動物的和諧共存。
+          </p>
+        </li>
+      </ol>
+      <p>
+        關注愛滋貓議題不僅是保護牠們的權益，也是在呼籲社會尊重生命、支持多元與包容，這是每個愛心人士都值得參與的努力。
       </p>
     </div>
 
@@ -81,12 +129,8 @@
             <br /><br />
           </div>
           <div class="item_pay">
-            <div class="item_pay_once">
-              <p>單次NT$1,200</p>
-            </div>
-            <div class="item_pay_month">
-              <p>定期定額</p>
-            </div>
+            <a class="item_pay_once" href="./game.html">單次NT$1,200</a>
+            <a class="item_pay_month" href="./game.html">定期定額</a>
           </div>
         </div>
 
@@ -110,12 +154,8 @@
             <br />
           </div>
           <div class="item_pay">
-            <div class="item_pay_once">
-              <p>單次NT$6,000</p>
-            </div>
-            <div class="item_pay_month">
-              <p>定期定額</p>
-            </div>
+            <a class="item_pay_once" href="./game.html">單次NT$6,000</a>
+            <a class="item_pay_month" href="./game.html">定期定額</a>
           </div>
         </div>
 
@@ -142,12 +182,8 @@
             <div style="height: 10px"></div>
           </div>
           <div class="item_pay">
-            <div class="item_pay_once">
-              <p>單次NT$12,000</p>
-            </div>
-            <div class="item_pay_month">
-              <p>定期定額</p>
-            </div>
+            <a class="item_pay_once" href="./game.html">單次NT$12,000</a>
+            <a class="item_pay_month" href="./game.html">定期定額</a>
           </div>
         </div>
       </div>
